updated wind trigger for rain and snow particles to work

--- a/Age_MACE/Age_MACE.csproj
+++ b/Age_MACE/Age_MACE.csproj
@@ -230,32 +230,8 @@
     <Reference Include="UnityEngine.UI">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.10f1/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.Analytics.Editor">
-      <HintPath>C:/Users/1740037/Desktop/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>C:/Users/1740037/Desktop/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>C:/Users/1740037/Desktop/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
-    </Reference>
-    <Reference Include="ResonanceAudio">
-      <HintPath>Assets/Liminal/SDK/Assemblies/Core/ResonanceAudio.dll</HintPath>
-    </Reference>
-    <Reference Include="Google.ProtocolBuffers">
-      <HintPath>Assets/Liminal/SDK/Frameworks/GoogleVR/Plugins/Google.ProtocolBuffers.dll</HintPath>
-    </Reference>
-    <Reference Include="OVR">
-      <HintPath>Assets/Liminal/SDK/Assemblies/Core/OVR.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>Assets/Liminal/SDK/Plugins/Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="GVR">
       <HintPath>Assets/Liminal/SDK/Assemblies/Core/GVR.dll</HintPath>
-    </Reference>
-    <Reference Include="Liminal.SDK.VR.Emulator">
-      <HintPath>Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Emulator.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK">
       <HintPath>Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.dll</HintPath>
@@ -263,11 +239,35 @@
     <Reference Include="Liminal.SDK.VR.Daydream">
       <HintPath>Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Daydream.dll</HintPath>
     </Reference>
+    <Reference Include="Liminal.SDK.VR.Emulator">
+      <HintPath>Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Emulator.dll</HintPath>
+    </Reference>
     <Reference Include="Liminal.SDK.VR.GearVR">
       <HintPath>Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.GearVR.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK.VR.Tools">
       <HintPath>Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Tools.dll</HintPath>
+    </Reference>
+    <Reference Include="OVR">
+      <HintPath>Assets/Liminal/SDK/Assemblies/Core/OVR.dll</HintPath>
+    </Reference>
+    <Reference Include="ResonanceAudio">
+      <HintPath>Assets/Liminal/SDK/Assemblies/Core/ResonanceAudio.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.ProtocolBuffers">
+      <HintPath>Assets/Liminal/SDK/Frameworks/GoogleVR/Plugins/Google.ProtocolBuffers.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Assets/Liminal/SDK/Plugins/Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Analytics.Editor">
+      <HintPath>C:/Users/1840549/Desktop/age/LiminalAge/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Analytics.StandardEvents">
+      <HintPath>C:/Users/1840549/Desktop/age/LiminalAge/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Analytics.Tracker">
+      <HintPath>C:/Users/1840549/Desktop/age/LiminalAge/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2019.1.10f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
@@ -634,6 +634,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\ControllerTesting.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\LeafColor.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\LeafFalling.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\LightColor.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\TimeManager.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\Wind.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\WindTrigger.cs" />
     <Compile Include="Assets\Liminal\Examples\Scripts\AutoVRAvatarSetup.cs" />
     <Compile Include="Assets\Liminal\Examples\Scripts\ControllerInputExample.cs" />
     <Compile Include="Assets\Liminal\Examples\Scripts\InputHandler.cs" />
@@ -641,6 +648,8 @@
     <Compile Include="Assets\Liminal\Excluded\Tests\TestCube.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\DevsTestFolder\Felipe\TestMaterials\SnowCoveredShader.shader" />
+    <None Include="Assets\Fantasy Forest Environment Free Sample\StandardNoCulling.shader" />
     <None Include="Assets\Liminal\SDK\Assemblies\Core\Liminal.SDK.VR.Daydream.xml" />
     <None Include="Assets\Liminal\SDK\Assemblies\Core\Liminal.SDK.VR.Emulator.xml" />
     <None Include="Assets\Liminal\SDK\Assemblies\Core\Liminal.SDK.VR.GearVR.xml" />
