--- a/Age_MACE/Assembly-CSharp.csproj
+++ b/Age_MACE/Assembly-CSharp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Assets\Liminal\Excluded\Tests\Test.cs" />
     <Compile Include="Assets\Liminal\Excluded\Tests\TestCube.cs" />
     <None Include="Assets\Liminal\SDK\Assets\Shaders\LiminalReticle.shader" />
+    <None Include="Assets\DevsTestFolder\Felipe\TestMaterials\SnowShader_Impoved.shader" />
     <None Include="Assets\Liminal\SDK\Assemblies\Core\Liminal.SDK.VR.Daydream.xml" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Resources\OVRMRUnlitTransparent.shader" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Resources\OVRMRChromaKey.cginc" />
@@ -84,6 +85,7 @@
     <None Include="Assets\Liminal\SDK\Frameworks\GoogleVR\Shaders\GvrAdditiveOverlay.shader" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Resources\Cubemap Blit.shader" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Resources\OVRMRUnlit.shader" />
+    <None Include="Assets\DevsTestFolder\Felipe\TestMaterials\WaterShader.shader" />
     <None Include="Assets\Liminal\SDK\Assemblies\Core\Liminal.SDK.VR.GearVR.xml" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Shaders\Unlit Crosshair.shader" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Resources\Unlit Transparent Color.shader" />
