--- a/Age_MACE/Assembly-CSharp.csproj
+++ b/Age_MACE/Assembly-CSharp.csproj
@@ -24,7 +24,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>Temp\bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE;UNITY_2019_1_10;UNITY_2019_1;UNITY_2019;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2019_1_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_TEXTURE_STREAMING;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_VIDEO;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_SCRIPTING_GC_WBARRIERS;ENABLE_EVENT_QUEUE;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_STANDARD_2_0;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_VSTU;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_2019_1_10;UNITY_2019_1;UNITY_2019;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2019_1_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_TEXTURE_STREAMING;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_VIDEO;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_SCRIPTING_GC_WBARRIERS;ENABLE_EVENT_QUEUE;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_STANDARD_2_0;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_VSTU;UNITY_PRO_LICENSE;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <NoWarn>0169</NoWarn>
@@ -62,6 +62,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\DevsTestFolder\Sean\TestScripts\MEH.cs" />
+    <Compile Include="Assets\DevsTestFolder\William\TestScripts\ColorManager.cs" />
     <Compile Include="Assets\DevsTestFolder\William\TestScripts\ControllerTesting.cs" />
     <Compile Include="Assets\DevsTestFolder\William\TestScripts\LeafColor.cs" />
     <Compile Include="Assets\DevsTestFolder\William\TestScripts\LightColor.cs" />
@@ -73,6 +75,8 @@
     <Compile Include="Assets\Liminal\Examples\Scripts\InputHandler.cs" />
     <Compile Include="Assets\Liminal\Excluded\Tests\Test.cs" />
     <Compile Include="Assets\Liminal\Excluded\Tests\TestCube.cs" />
+    <Compile Include="Assets\M.A.C.E\Audio\YIKES.cs" />
+    <Compile Include="Assets\M.A.C.E\Scripts\OOF.cs" />
     <None Include="Assets\Liminal\SDK\Assets\Shaders\LiminalReticle.shader" />
     <None Include="Assets\DevsTestFolder\Felipe\TestMaterials\SnowShader_Impoved.shader" />
     <None Include="Assets\Liminal\SDK\Assemblies\Core\Liminal.SDK.VR.Daydream.xml" />
@@ -116,22 +120,22 @@
     <None Include="Assets\DevsTestFolder\Felipe\TestMaterials\Shaders\AdvancedSnowShader.shader" />
     <None Include="Assets\Liminal\SDK\Frameworks\OVR\Plugins\placeholder.txt" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -317,43 +321,43 @@
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.10f1/Editor/Data/UnityExtensions/Unity/TestRunner/net35/unity-custom/nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="GVR">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/GVR.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/GVR.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK.VR.Daydream">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Daydream.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Daydream.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK.VR.Emulator">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Emulator.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Emulator.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK.VR.GearVR">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.GearVR.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.GearVR.dll</HintPath>
     </Reference>
     <Reference Include="Liminal.SDK.VR.Tools">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Tools.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/Liminal.SDK.VR.Tools.dll</HintPath>
     </Reference>
     <Reference Include="OVR">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/OVR.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/OVR.dll</HintPath>
     </Reference>
     <Reference Include="ResonanceAudio">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/ResonanceAudio.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Assemblies/Core/ResonanceAudio.dll</HintPath>
     </Reference>
     <Reference Include="Google.ProtocolBuffers">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Frameworks/GoogleVR/Plugins/Google.ProtocolBuffers.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Frameworks/GoogleVR/Plugins/Google.ProtocolBuffers.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Assets/Liminal/SDK/Plugins/Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Assets/Liminal/SDK/Plugins/Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>D:/LaSalle/Quarter 7/Critical Game Design/M.A.C.E/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>C:/Users/1740037/Desktop/VR/Age_MACE/Library/PackageCache/com.unity.analytics@3.3.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2019.1.10f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
